couleur de saison noir

--- a/Serious/app/templates/serie.html
+++ b/Serious/app/templates/serie.html
@@ -22,7 +22,7 @@
 						{% for saison in saisons %}
 				 <!-- Tab links -->
 						<div class="tab">
-						  <button class="tablinks" onclick="openSeason(event, 'saison {{saison.number}}')">Saison {{ saison.number }}</button>
+						  <button class="tablinks" onclick="openSeason(event, 'saison {{saison.number}}')" style="color: #0b0b0b">Saison {{ saison.number }}</button>
 						</div>
 
 
