--- a/Serious/app/templates/base.html
+++ b/Serious/app/templates/base.html
@@ -57,6 +57,17 @@
                         {% else %}
                          <a href="{{ url_for('logout')}}">Logout</a>
                         {% endif %}
+						<li>
+                        <a href="{{ url_for('messages') }}">
+
+                            {% set new_messages = current_user.new_messages() %}
+                            <span id="message_count" class="badge"
+                                  style="visibility: {% if new_messages %}visible
+                                                     {% else %}hidden {% endif %};">
+                                {{ new_messages }}
+                            </span>
+                        </a>
+						</li>
 					</div>
 
 
@@ -111,6 +122,30 @@
 		}
 	}
 	</script>
+
+    <script>
+		function set_message_count(n) {
+            $('#message_count').text(n);
+            $('#message_count').css('visibility', n ? 'visible' : 'hidden');
+        }
+
+        {% if current_user.is_authenticated %}
+        $(function() {
+            var since = 0;
+            setInterval(function() {
+                $.ajax("{{ url_for('notifications') }}?since=" + since).done(
+                    function(notifications) {
+                        for (var i = 0; i < notifications.length; i++) {
+                            if (notifications[i].name == 'unread_message_count')
+                                set_message_count(notifications[i].data);
+                            since = notifications[i].timestamp;
+                        }
+                    }
+                );
+            }, 10000);
+        });
+        {% endif %}
+    </script>
 
 	</body>
 </html>
