--- a/Serious/app/templates/home.html
+++ b/Serious/app/templates/home.html
@@ -34,7 +34,7 @@
 							<img src={{ post.images.show }} alt="#"/></a>
 
 						<form action="" method="POST">
-    						<button name="button" value="{{serie_id}}">Klik</button>
+    						<button name="button" value="{{serie_id}}">Ajouter</button>
 						</form>
 					</div>
 				</div>
