--- a/Serious/app/templates/serie.html
+++ b/Serious/app/templates/serie.html
@@ -10,7 +10,7 @@
 
 			<div class="row">
 				<form action="" method="POST">
-    				<button name="button" value="{{serie_id}}">Klik</button>
+    				<button name="button" value="{{serie_id}}">Ajouter</button>
 				</form>
 				<div class="col-xl-9 col-lg-8 col-md-7 game-single-content">
 					<div class="gs-meta">11.11.18</div>
