--- a/Serious/app/templates/series.html
+++ b/Serious/app/templates/series.html
@@ -10,7 +10,7 @@
 
 		<div class="container">
 			<form  method="POST" action="" class="coord_gps"  name="coord" >
-            	<label>Recherche: <input id = "search" type="text" name="search" value = ""></label>
+            	<label class="container text-white">Recherche: <input id = "search" type="text" name="search" value = ""></label>
         	</form>
 
 			<ul class="game-filter">
@@ -38,7 +38,7 @@
 									</a>
 
 									<form action="" method="post">
-    									<button name="button" value="{{post.id}}">Klik</button>
+    									<button name="button" value="{{post.id}}">Ajouter</button>
 									</form>
 								</div>
 							</div>
