--- a/Serious/app/templates/messages.html
+++ b/Serious/app/templates/messages.html
@@ -7,21 +7,12 @@
 		<div class="container text-white">
 			<h1>Vos prochains episodes</h1>
 		</div>
-    <h1>Bonjoudxd</h1>
-    {% for post in messages %}
-        {{post}}
-    {% endfor %}    <nav aria-label="...">
-        <ul class="pager">
-            <li class="previous{% if not prev_url %} disabled{% endif %}">
-                <a href="{{ prev_url or '#' }}">
-                    <span aria-hidden="true">&larr;</span>
-                </a>
-            </li>
-            <li class="next{% if not next_url %} disabled{% endif %}">
-                <a href="{{ next_url or '#' }}">
-                     <span aria-hidden="true">&rarr;</span>
-                </a>
-            </li>
-        </ul>
-    </nav>
+
+        <div class="container game-single-content">
+        {% for post in messages %}
+            <h2 class="text-white">Titre série - N°série N°épisode</h2>
+            <p>Date diffusion</p>
+        {% endfor %}
+        </div>
+    </section>
 {% endblock %}
