--- a/Serious/app/templates/my_list.html
+++ b/Serious/app/templates/my_list.html
@@ -5,13 +5,12 @@
 	<section class="games-section">
 
 		<div class="container text-white">
-			<h1>Séries</h1>
+			<h1>Ma Liste</h1>
 		</div>
 
 		<div class="container">
 
 			<div class="row">
-				<div class="col-xl-7 col-lg-8 col-md-7">
 					<div class="row">
 						{% for post in posts %}
 							<div class="col-lg-4 col-md-6">
@@ -32,7 +31,6 @@
 							</div>
 						{% endfor %}
 					</div>
-				</div>
 			</div>
 		</div>
 	</section>
