--- a/Serious/app/templates/series.html
+++ b/Serious/app/templates/series.html
@@ -37,10 +37,10 @@
 										<img src="{{ url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/>
 									</a>
                                     {% if current_user.is_anonymous %}
-                                    <a href="{{ url_for('login') }}"><button name="button">Ajouter</button></a>
+                                    <a href="{{ url_for('login') }}"><button name="button">{{ post.ajout }}</button></a>
                                     {% else %}
 									<form action="" method="post">
-    									<button name="button" value="{{(post.id, post.title, post.images.show)}}">Ajouter</button>
+    									<button name="button" value="{{(post.id, post.title, post.images.show)}}">{{ post.ajout }}</button>
 									</form>
                                     {% endif %}
 								</div>
