Affichage de notifs fixé +

--- a/Serious/app/templates/base.html
+++ b/Serious/app/templates/base.html
@@ -143,6 +143,11 @@
         });
         {% endif %}
     </script>
+    <script>
+        function sw() {
+            alert("Done ! 👌 ");
+        }
+    </script>
 
 	</body>
 </html>
