--- a/Serious/app/templates/home.html
+++ b/Serious/app/templates/home.html
@@ -28,13 +28,13 @@
 					<div class="intro-text-box text-box text-white">
 						<h3>{{ post.title }}</h3>
 						<p>{{ post.description }}</p>
-						<a href="{{ url_for('serie', serie_id=post.id)}}" class="read-more">Read More
+						<a href="{{ url_for('SerieView:serie', serie_id=post.id)}}" class="read-more">Read More
 							<img src="{{ url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/></a>
-						<a href="{{ url_for('serie', serie_id=post.id)}}" class="read-more">
+						<a href="{{ url_for('SerieView:serie', serie_id=post.id)}}" class="read-more">
 							<img src={{ post.images.show }} alt="#"/>
                         </a>
                         {% if current_user.is_anonymous %}
-                        <a href="{{ url_for('login') }}"><button name="button">{{post.ajout}}</button></a>
+                        <a href="{{ url_for('LoggerView:login') }}"><button name="button">{{post.ajout}}</button></a>
                         {% else %}
                         <form action="" method="post">
                             <button name="button" value="{{(post.id, post.title, post.images.show)}}">{{post.ajout}}</button>
