--- a/Serious/app/templates/login.html
+++ b/Serious/app/templates/login.html
@@ -54,6 +54,6 @@
         <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
         <p>{{ form.submit() }}</p>
     </form>
-    <p>New User? <a href="{{ url_for('register') }}">Click to Register!</a></p>
+    <p>New User? <a href="{{ url_for('LoggerView:registering') }}">Click to Register!</a></p>
 </body>
 </html>
