--- a/Serious/app/templates/series.html
+++ b/Serious/app/templates/series.html
@@ -14,10 +14,10 @@
         	</form>
 
 			<ul class="game-filter">
-				<li><a href="{{ url_for('series', starting=' ', page=1)}}">#</a></li>
+				<li><a href="{{ url_for('SeriesView:series', starting=' ', page=1)}}">#</a></li>
 				{% for lettre in ['A', 'B', 'C', 'D', 'E', 'F', 'G', 'H', 'I', 'J', 'K', 'L', 'M', 'N', 'O', 'P',
 				'Q', 'R', 'S', 'T', 'U', 'V', 'W', 'X', 'Y', 'Z'] %}
-					<li><a href="{{ url_for('series', starting=lettre, page=1)}}">{{lettre}}</a></li>
+					<li><a href="{{ url_for('SeriesView:series', starting=lettre, page=1)}}">{{lettre}}</a></li>
 				{% endfor %}
 			</ul>
 
@@ -26,18 +26,18 @@
 						{% for post in posts %}
 							<div class="col-lg-4 col-md-6">
 								<div class="game-item">
-									<a href="{{ url_for('serie', serie_id=post.id)}}" class="read-more">
+									<a href="{{ url_for('SerieView:serie', serie_id=post.id)}}" class="read-more">
 										{% if post.images.show %}
 											<img src={{ post.images.show }} alt="#"/>
 										{% endif %}
 									</a>
 
 									<h5>{{ post.title }}</h5>
-									<a href="{{ url_for('serie', serie_id=post.id)}}" class="read-more">Read More
+									<a href="{{ url_for('SerieView:serie', serie_id=post.id)}}" class="read-more">Read More
 										<img src="{{ url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/>
 									</a>
                                     {% if current_user.is_anonymous %}
-                                    <a href="{{ url_for('login') }}"><button name="button">{{ post.ajout }}</button></a>
+                                    <a href="{{ url_for('LoggerView:login') }}"><button name="button">{{ post.ajout }}</button></a>
                                     {% else %}
                                     <div id="switch">
 									<form name="theform" action="" method="post">
@@ -52,16 +52,16 @@
 
 					<div class="site-pagination">
 						{% if starting %}
-						<a href="{{ url_for('series', starting=starting, page=1)}}">1.</a>
+						<a href="{{ url_for('SeriesView:series', starting=starting, page=1)}}">1.</a>
 						{% if page > 2 %}
 							<a style="color: white">...</a>
-							<a href="{{ url_for('series', starting=starting, page=page-1)}}">{{page-1}}.</a>
-							<a href="{{ url_for('series', starting=starting, page=page)}}">{{page}}.</a>
-							<a href="{{ url_for('series', starting=starting, page=page+1)}}">{{page+1}}.</a>
+							<a href="{{ url_for('SeriesView:series', starting=starting, page=page-1)}}">{{page-1}}.</a>
+							<a href="{{ url_for('SeriesView:series', starting=starting, page=page)}}">{{page}}.</a>
+							<a href="{{ url_for('SeriesView:series', starting=starting, page=page+1)}}">{{page+1}}.</a>
 							<a style="color: white">...</a>
 						{% else %}
-							<a href="{{ url_for('series', starting=starting, page=2)}}">2.</a>
-							<a href="{{ url_for('series', starting=starting, page=3)}}">3.</a>
+							<a href="{{ url_for('SeriesView:series', starting=starting, page=2)}}">2.</a>
+							<a href="{{ url_for('SeriesView:series', starting=starting, page=3)}}">3.</a>
 						{% endif %}
 						{% endif %}
 					</div>
