HTML fixés pour POO

--- a/Serious/app/templates/my_list.html
+++ b/Serious/app/templates/my_list.html
@@ -22,7 +22,7 @@
 									</a>
 
 									<h5>{{ post[3] }}</h5>
-									<a href="{{ url_for('SerieViews:serie', serie_id=post[2])}}" class="read-more">Read More
+									<a href="{{ url_for('SerieView:serie', serie_id=post[2])}}" class="read-more">Read More
 										<img src="{{ url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/>
 									</a>
                                     <div id="switch">
