--- a/Serious/app/templates/my_list.html
+++ b/Serious/app/templates/my_list.html
@@ -15,14 +15,14 @@
 						{% for post in posts %}
 							<div class="col-lg-4 col-md-6">
 								<div class="game-item">
-									<a href="{{ url_for('serie', serie_id=post[2])}}" class="read-more">
+									<a href="{{ url_for('SerieView:serie', serie_id=post[2])}}" class="read-more">
                                         {% if post[4]%}
 											<img src={{ post[4] }} alt="#"/>
 										{% endif %}
 									</a>
 
 									<h5>{{ post[3] }}</h5>
-									<a href="{{ url_for('serie', serie_id=post[2])}}" class="read-more">Read More
+									<a href="{{ url_for('SerieView:serie', serie_id=post[2])}}" class="read-more">Read More
 										<img src="{{ url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/>
 									</a>
                                     <div id="switch">
