--- a/Serious/app/templates/series.html
+++ b/Serious/app/templates/series.html
@@ -26,14 +26,14 @@
 						{% for post in posts %}
 							<div class="col-lg-4 col-md-6">
 								<div class="game-item">
-									<a href="{{ url_for('serie', serie_id=post.id)}}" class="read-more">
+									<a href="{{ url_for('SerieView:serie', serie_id=post.id)}}" class="read-more">
 										{% if post.images.show %}
 											<img src={{ post.images.show }} alt="#"/>
 										{% endif %}
 									</a>
 
 									<h5>{{ post.title }}</h5>
-									<a href="{{ url_for('serie', serie_id=post.id)}}" class="read-more">Read More
+									<a href="{{ url_for('SerieView:serie', serie_id=post.id)}}" class="read-more">Read More
 										<img src="{{ url_for('static', filename='img/icons/double-arrow.png')}}" alt="#"/>
 									</a>
                                     {% if current_user.is_anonymous %}
